this is enumodify all over again